--- a/app/build.gradle
+++ b/app/build.gradle
@@ -50,9 +50,12 @@ dependencies {
     implementation "androidx.navigation:navigation-ui-ktx:$nav_version"
     implementation "androidx.navigation:navigation-compose:1.0.0-alpha10"
     def room_version = "2.3.0"
-
-
+    implementation 'androidx.recyclerview:recyclerview:1.1.0'
     implementation 'com.squareup.retrofit2:retrofit:2.9.0'
     implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
     implementation 'com.google.code.gson:gson:2.8.6'
-}
+    implementation 'androidx.cardview:cardview:1.0.0'
+
+
+    }
+
